--- a/qa-brh.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-brh.planx-pla.net/metadata/aggregate_config.json
@@ -244,7 +244,7 @@
 				"dbgap_accession_number": {"path" :"collection_id", "filters": [ "uppercase" ]},
 				"study_description": {"path" :"description", "filters": [ "strip_html", "prepare_cidc_description" ]},
 				"image_types": "path:image_types",
-				"_subjects_count" : "path:subjects_count",
+				"_subjects_count" : "path:subject_count",
 				"doi" : {"path" :"doi", "filters": [ "uppercase" ]},
 				"species" : "path:species",
 				"disease_type" : "path:cancer_type",
