--- a/jenkins-genomel.planx-pla.net/manifest.json
+++ b/jenkins-genomel.planx-pla.net/manifest.json
@@ -33,7 +33,9 @@
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
     "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",
+    "argo-wrapper": "quay.io/cdis/argo-wrapper:master",
+    "cohort-middleware": "quay.io/cdis/cohort-middleware:master"
   },
   "arborist": {
     "deployment_version": "2"
