--- a/qa-midrc.planx-pla.net/etlMapping.yaml
+++ b/qa-midrc.planx-pla.net/etlMapping.yaml
@@ -76,7 +76,7 @@ mappings:
           - name: days_to_procedure_start
           - name: procedure_name
     joining_props:
-      - index: imaging_data_file
+      - index: data_file
         join_on: _case_id
         props:
           - name: object_id
@@ -103,6 +103,41 @@ mappings:
       - name: test_method
       - name: test_name
       - name: test_result_text
+  - name: midrc_annotation
+    doc_type: annotation
+    type: aggregator
+    root: annotation
+    props:
+      - name: project_id
+      - name: submitter_id
+      - name: case_ids
+      - name: airspace_disease_grading
+      - name: class_covid19_pneumonia
+      - name: midrc_mRALE_score
+      - name: annotation_method
+      - name: annotator_id
+      - name: instance_uids
+    parent_props:
+      - path: imaging_studies[imaging_study_submitter_id:submitter_id].cases[sex,race,age_at_index,index_event,zip,covid19_positive,ethnicity].datasets[dataset_submitter_id:submitter_id]
+    joining_props:
+      - index: data_file
+        join_on: _annotation_id
+        props:
+          - name: object_id
+            src: object_id
+            fn: set
+          - name: data_format
+            src: data_format
+            fn: set
+          - name: data_type
+            src: data_type
+            fn: set
+          - name: data_category
+            src: data_category
+            fn: set
+          - name: data_file_submitter_ids
+            src: submitter_id
+            fn: set
   - name: midrc_imaging_study
     doc_type: imaging_study
     type: aggregator
@@ -153,7 +188,7 @@ mappings:
     parent_props:
       - path: cases[sex,race,age_at_index,index_event,zip,covid19_positive,ethnicity].datasets[dataset_submitter_id:submitter_id]
     joining_props:
-      - index: imaging_data_file
+      - index: data_file
         join_on: _imaging_study_id
         props:
           - name: object_id
@@ -168,12 +203,13 @@ mappings:
           - name: data_category
             src: data_category
             fn: set
-  - name: midrc_imaging_data_file
-    doc_type: imaging_data_file
+  - name: midrc_data_file
+    doc_type: data_file
     type: collector
     root: None
-    category: imaging_data_file
+    category: data_file
     props:
+      - name: source_node
       - name: project_id
       - name: submitter_id
       - name: series_uid
@@ -185,6 +221,11 @@ mappings:
       - name: data_format
       - name: data_type
       - name: data_category
+      - name: annotation_method
+      - name: annotation_name
+      - name: annotator_id
+      - name: instance_uids
+      - name: software_versions
       - name: acquisition_type
       - name: angio_flag
       - name: contrast_bolus_agent
@@ -224,97 +265,9 @@ mappings:
           - name: _dataset_id
             src: id
             fn: set
-      case:
+      annotation:
         props:
-          - name: _case_id
-            src: id
-            fn: set
-          - name: age_at_index
-            src: age_at_index
-            fn: set
-          - name: covid19_positive
-            src: covid19_positive
-            fn: set
-          - name: index_event
-            src: index_event
-            fn: set
-          - name: race
-            src: race
-            fn: set
-          - name: sex
-            src: sex
-            fn: set
-          - name: zip
-            src: zip
-            fn: set
-      imaging_study:
-        props:
-          - name: _imaging_study_id
-            src: id
-            fn: set
-          - name: age_at_imaging
-            src: age_at_imaging
-            fn: set
-          - name: body_part_examined
-            src: body_part_examined
-            fn: set
-          - name: days_from_study_to_neg_covid_test
-            src: days_from_study_to_neg_covid_test
-            fn: set
-          - name: days_from_study_to_pos_covid_test
-            src: days_from_study_to_pos_covid_test
-            fn: set
-          - name: days_to_study
-            src: days_to_study
-            fn: set
-          - name: study_description
-            src: study_description
-            fn: set
-          - name: study_modality
-            src: study_modality
-            fn: set
-          - name: study_location
-            src: study_location
-            fn: set
-          - name: study_year
-            src: study_year
-            fn: set
-          - name: study_year_shifted
-            src: study_year_shifted
-            fn: set
-          - name: study_uid
-            src: study_uid
-            fn: set
-  - name: midrc_annotation_data_file
-    doc_type: annotation_data_file
-    type: collector
-    root: None
-    category: annotation_data_file
-    props:
-      - name: project_id
-      - name: submitter_id
-      - name: case_ids
-      - name: object_id
-      - name: md5sum
-      - name: file_name
-      - name: file_size
-      - name: data_category
-      - name: data_format
-      - name: data_type
-      - name: annotation_method
-      - name: annotation_name
-      - name: annotator_id
-      - name: instance_uids
-      - name: manufacturer
-      - name: manufacturer_model_name
-      - name: modality
-      - name: series_description
-      - name: series_uid
-      - name: software_versions
-    injecting_props:
-      dataset:
-        props:
-          - name: _dataset_id
+          - name: _annotation_id
             src: id
             fn: set
       case:
@@ -378,17 +331,3 @@ mappings:
           - name: study_uid
             src: study_uid
             fn: set
-  - name: midrc_annotation
-    doc_type: annotation
-    type: aggregator
-    root: annotation
-    props:
-      - name: project_id
-      - name: submitter_id
-      - name: case_ids
-      - name: airspace_disease_grading
-      - name: class_covid19_pneumonia
-      - name: midrc_mRALE_score
-      - name: annotation_method
-      - name: annotator_id
-      - name: instance_uids
