--- a/jenkins-perf.planx-pla.net/manifest.json
+++ b/jenkins-perf.planx-pla.net/manifest.json
@@ -15,6 +15,7 @@
     "ws-storage": "quay.io/cdis/ws-storage:master",
     "peregrine": "quay.io/cdis/peregrine:master",
     "portal": "quay.io/cdis/data-portal:master",
+    "pidgin": "quay.io/cdis/pidgin:master",
     "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
     "sheepdog": "quay.io/cdis/sheepdog:master",
     "spark": "quay.io/cdis/gen3-spark:master",
@@ -44,72 +45,16 @@
     "USE_AGG_MDS": true,
     "AGG_MDS_NAMESPACE": "jenkins-perf"
   },
-  "sower": [
-    {
-      "name": "pelican-export",
-      "action": "export",
-      "container": {
-        "name": "job-task",
-        "image": "quay.io/cdis/pelican-export:master",
-        "pull_policy": "Always",
-        "env": [
-          {
-            "name": "DICTIONARY_URL",
-            "valueFrom": {
-              "configMapKeyRef": {
-                "name": "manifest-global",
-                "key": "dictionary_url"
-              }
-            }
-          },
-          {
-            "name": "GEN3_HOSTNAME",
-            "valueFrom": {
-              "configMapKeyRef": {
-                "name": "manifest-global",
-                "key": "hostname"
-              }
-            }
-          },
-          {
-            "name": "ROOT_NODE",
-            "value": "subject"
-          }
-        ],
-        "volumeMounts": [
-          {
-            "name": "pelican-creds-volume",
-            "readOnly": true,
-            "mountPath": "/pelican-creds.json",
-            "subPath": "config.json"
-          },
-          {
-            "name": "peregrine-creds-volume",
-            "readOnly": true,
-            "mountPath": "/peregrine-creds.json",
-            "subPath": "creds.json"
-          }
-        ],
-        "cpu-limit": "1",
-        "memory-limit": "4Gi"
-      },
-      "volumes": [
-        {
-          "name": "pelican-creds-volume",
-          "secret": {
-            "secretName": "pelicanservice-g3auto"
-          }
-        },
-        {
-          "name": "peregrine-creds-volume",
-          "secret": {
-            "secretName": "peregrine-creds"
-          }
-        }
-      ],
-      "restart_policy": "Never"
-    }
-  ],
+  "sower": {
+    "name": "pelican-export",
+    "container": {
+      "name": "job-task",
+      "image": "quay.io/cdis/pelican:master",
+      "pull_policy": "always",
+      "env": []
+    },
+    "restart_policy": "never"
+  },
   "peregrine": {
     "sidecar": "True"
   },
