--- a/qa-anvil.planx-pla.net/manifest.json
+++ b/qa-anvil.planx-pla.net/manifest.json
@@ -13,11 +13,11 @@
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
     "fence": "quay.io/cdis/fence:2021.06",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
-    "guppy": "quay.io/cdis/guppy:2021.06",
+    "guppy": "quay.io/cdis/guppy:feat_es7",
     "hatchery": "quay.io/cdis/hatchery:2021.06",
     "indexd": "quay.io/cdis/indexd:2021.06",
     "manifestservice": "quay.io/cdis/manifestservice:2021.06",
-    "metadata": "quay.io/cdis/metadata-service:2021.06",
+    "metadata": "quay.io/cdis/metadata-service:feat_es-7",
     "peregrine": "quay.io/cdis/peregrine:2021.06",
     "pidgin": "quay.io/cdis/pidgin:2021.06",
     "portal": "quay.io/cdis/data-portal:2021.06",
@@ -25,7 +25,7 @@
     "sheepdog": "quay.io/cdis/sheepdog:2021.06",
     "sower": "quay.io/cdis/sower:2021.06",
     "spark": "quay.io/cdis/gen3-spark:2021.06",
-    "tube": "quay.io/cdis/tube:2021.06",
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
     "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2021.06",
     "wts": "quay.io/cdis/workspace-token-service:2021.06",
     "dashboard": "quay.io/cdis/gen3-statics:2020.10"
@@ -45,7 +45,8 @@
     "tier_access_level": "regular",
     "tier_access_limit": 50,
     "public_datasets": true,
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "ssjdispatcher": {
     "job_images": {
