--- a/qa-canine.planx-pla.net/manifest.json
+++ b/qa-canine.planx-pla.net/manifest.json
@@ -19,12 +19,12 @@
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
     "spark": "quay.io/cdis/gen3-spark:2020.03",
-    "tube": "quay.io/cdis/tube:2020.03",
+    "tube": "quay.io/cdis/tube:feat_new-es-7",
     "ssjdispatcher": "quay.io/cdis/ssjdispatcher:2020.03",
-    "guppy": "quay.io/cdis/guppy:2020.03",
+    "guppy": "quay.io/cdis/guppy:feat_es7",
     "sower": "quay.io/cdis/sower:2020.03",
     "dashboard": "quay.io/cdis/gen3-statics:master",
-    "metadata": "quay.io/cdis/metadata-service:master"
+    "metadata": "quay.io/cdis/metadata-service:feat_es-7"
   },
   "sower": [
     {
@@ -118,7 +118,8 @@
     "useryaml_s3path": "s3://cdis-gen3-users/qa/user.yaml",
     "dispatcher_job_num": "10",
     "netpolicy": "on",
-    "lb_type": "internal"
+    "lb_type": "internal",
+    "es7": true
   },
   "canary": {
     "default": 0
