update icpsr aggs conf

--- a/qa-heal.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-heal.planx-pla.net/metadata/aggregate_config.json
@@ -213,7 +213,12 @@
                 ]
             },
             "field_mappings": {
-                "tags": [],
+                "tags": [
+                    {
+                        "name": "InCommon",
+                        "category": "RequiredIDP"
+                    }
+                ],
                 "authz": "",
                 "study_description_summary": {
                     "path": "description",
